// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`flow-operation-base-service > addBlock deleteBlock 1`] = `
{
  "nodes": [
    {
      "id": "start_0",
      "type": "start",
    },
    {
      "blocks": [
        {
          "id": "block_0",
          "type": "block",
        },
        {
          "blocks": [
            {
              "id": "noop_0",
              "type": "noop",
            },
          ],
          "id": "block_1",
          "type": "block",
        },
        {
          "id": "test",
          "type": "block",
        },
      ],
      "id": "dynamicSplit_0",
      "type": "dynamicSplit",
    },
    {
      "id": "end_0",
      "type": "end",
    },
  ],
}
`;

exports[`flow-operation-base-service > addBlock deleteBlock 2`] = `
{
  "nodes": [
    {
      "id": "start_0",
      "type": "start",
    },
    {
      "blocks": [
        {
          "id": "block_0",
          "type": "block",
        },
        {
          "blocks": [
            {
              "id": "noop_0",
              "type": "noop",
            },
          ],
          "id": "block_1",
          "type": "block",
        },
      ],
      "id": "dynamicSplit_0",
      "type": "dynamicSplit",
    },
    {
      "id": "end_0",
      "type": "end",
    },
  ],
}
`;

exports[`flow-operation-base-service > addBlock deleteBlock by index 1`] = `
{
  "nodes": [
    {
      "id": "start_0",
      "type": "start",
    },
    {
      "blocks": [
        {
          "id": "block_0",
          "type": "block",
        },
        {
          "id": "test",
          "type": "block",
        },
        {
          "blocks": [
            {
              "id": "noop_0",
              "type": "noop",
            },
          ],
          "id": "block_1",
          "type": "block",
        },
      ],
      "id": "dynamicSplit_0",
      "type": "dynamicSplit",
    },
    {
      "id": "end_0",
      "type": "end",
    },
  ],
}
`;

exports[`flow-operation-base-service > addBlock deleteBlock by index 2`] = `
{
  "nodes": [
    {
      "id": "start_0",
      "type": "start",
    },
    {
      "blocks": [
        {
          "id": "block_0",
          "type": "block",
        },
        {
          "blocks": [
            {
              "id": "noop_0",
              "type": "noop",
            },
          ],
          "id": "block_1",
          "type": "block",
        },
      ],
      "id": "dynamicSplit_0",
      "type": "dynamicSplit",
    },
    {
      "id": "end_0",
      "type": "end",
    },
  ],
}
`;

exports[`flow-operation-base-service > addChildNode deleteChildNode 1`] = `
[
  {
    "id": "test-node",
    "type": "block",
  },
]
`;

exports[`flow-operation-base-service > addChildNode deleteChildNode 2`] = `[]`;

exports[`flow-operation-base-service > addFromNode deleteFromNode 1`] = `
{
  "nodes": [
    {
      "id": "start_0",
      "type": "start",
    },
    {
      "id": "test",
      "type": "noop",
    },
    {
      "blocks": [
        {
          "id": "block_0",
          "type": "block",
        },
        {
          "blocks": [
            {
              "id": "noop_0",
              "type": "noop",
            },
          ],
          "id": "block_1",
          "type": "block",
        },
      ],
      "id": "dynamicSplit_0",
      "type": "dynamicSplit",
    },
    {
      "id": "end_0",
      "type": "end",
    },
  ],
}
`;

exports[`flow-operation-base-service > addFromNode deleteFromNode 2`] = `
{
  "nodes": [
    {
      "id": "start_0",
      "type": "start",
    },
    {
      "blocks": [
        {
          "id": "block_0",
          "type": "block",
        },
        {
          "blocks": [
            {
              "id": "noop_0",
              "type": "noop",
            },
          ],
          "id": "block_1",
          "type": "block",
        },
      ],
      "id": "dynamicSplit_0",
      "type": "dynamicSplit",
    },
    {
      "id": "end_0",
      "type": "end",
    },
  ],
}
`;

exports[`flow-operation-base-service > addNodes deleteNodes 1`] = `
{
  "nodes": [
    {
      "id": "start_0",
      "type": "start",
    },
    {
      "id": "test1",
      "type": "noop",
    },
    {
      "id": "test2",
      "type": "noop",
    },
    {
      "blocks": [
        {
          "id": "block_0",
          "type": "block",
        },
        {
          "blocks": [
            {
              "id": "noop_0",
              "type": "noop",
            },
          ],
          "id": "block_1",
          "type": "block",
        },
      ],
      "id": "dynamicSplit_0",
      "type": "dynamicSplit",
    },
    {
      "id": "end_0",
      "type": "end",
    },
  ],
}
`;

exports[`flow-operation-base-service > addNodes deleteNodes 2`] = `
{
  "nodes": [
    {
      "id": "start_0",
      "type": "start",
    },
    {
      "blocks": [
        {
          "id": "block_0",
          "type": "block",
        },
        {
          "blocks": [
            {
              "id": "noop_0",
              "type": "noop",
            },
          ],
          "id": "block_1",
          "type": "block",
        },
      ],
      "id": "dynamicSplit_0",
      "type": "dynamicSplit",
    },
    {
      "id": "end_0",
      "type": "end",
    },
  ],
}
`;

exports[`flow-operation-base-service > dragNodes 1`] = `
{
  "nodes": [
    {
      "id": "start_0",
      "type": "start",
    },
    {
      "blocks": [
        {
          "blocks": [
            {
              "id": "noop_0",
              "type": "noop",
            },
          ],
          "id": "block_1",
          "type": "block",
        },
        {
          "id": "block_0",
          "type": "block",
        },
        {
          "id": "block_2",
          "type": "block",
        },
      ],
      "id": "dynamicSplit_0",
      "type": "dynamicSplit",
    },
    {
      "id": "end_0",
      "type": "end",
    },
  ],
}
`;

exports[`flow-operation-base-service > dragNodes 2`] = `
{
  "nodes": [
    {
      "id": "start_0",
      "type": "start",
    },
    {
      "blocks": [
        {
          "blocks": [
            {
              "id": "noop_0",
              "type": "noop",
            },
          ],
          "id": "block_1",
          "type": "block",
        },
        {
          "id": "block_2",
          "type": "block",
        },
        {
          "id": "block_0",
          "type": "block",
        },
      ],
      "id": "dynamicSplit_0",
      "type": "dynamicSplit",
    },
    {
      "id": "end_0",
      "type": "end",
    },
  ],
}
`;

exports[`flow-operation-base-service > moveBlock 1`] = `
{
  "nodes": [
    {
      "id": "start_0",
      "type": "start",
    },
    {
      "blocks": [
        {
          "blocks": [
            {
              "id": "noop_0",
              "type": "noop",
            },
          ],
          "id": "block_1",
          "type": "block",
        },
        {
          "id": "block_0",
          "type": "block",
        },
        {
          "id": "block_2",
          "type": "block",
        },
      ],
      "id": "dynamicSplit_0",
      "type": "dynamicSplit",
    },
    {
      "id": "end_0",
      "type": "end",
    },
  ],
}
`;

exports[`flow-operation-base-service > moveBlock 2`] = `
{
  "nodes": [
    {
      "id": "start_0",
      "type": "start",
    },
    {
      "blocks": [
        {
          "id": "block_0",
          "type": "block",
        },
        {
          "blocks": [
            {
              "id": "noop_0",
              "type": "noop",
            },
          ],
          "id": "block_1",
          "type": "block",
        },
        {
          "id": "block_2",
          "type": "block",
        },
      ],
      "id": "dynamicSplit_0",
      "type": "dynamicSplit",
    },
    {
      "id": "end_0",
      "type": "end",
    },
  ],
}
`;

exports[`flow-operation-base-service > moveChildNodes 1`] = `
{
  "nodes": [
    {
      "id": "start_0",
      "type": "start",
    },
    {
      "blocks": [
        {
          "id": "block_2",
          "type": "block",
        },
        {
          "id": "block_0",
          "type": "block",
        },
        {
          "blocks": [
            {
              "id": "noop_0",
              "type": "noop",
            },
          ],
          "id": "block_1",
          "type": "block",
        },
      ],
      "id": "dynamicSplit_0",
      "type": "dynamicSplit",
    },
    {
      "id": "end_0",
      "type": "end",
    },
  ],
}
`;

exports[`flow-operation-base-service > moveChildNodes 2`] = `
{
  "nodes": [
    {
      "id": "start_0",
      "type": "start",
    },
    {
      "blocks": [
        {
          "id": "block_0",
          "type": "block",
        },
        {
          "blocks": [
            {
              "id": "noop_0",
              "type": "noop",
            },
          ],
          "id": "block_1",
          "type": "block",
        },
        {
          "id": "block_2",
          "type": "block",
        },
      ],
      "id": "dynamicSplit_0",
      "type": "dynamicSplit",
    },
    {
      "id": "end_0",
      "type": "end",
    },
  ],
}
`;

exports[`flow-operation-base-service > moveNodes 1`] = `
{
  "nodes": [
    {
      "id": "start_0",
      "type": "start",
    },
    {
      "id": "noop_0",
      "type": "noop",
    },
    {
      "blocks": [
        {
          "id": "block_0",
          "type": "block",
        },
        {
          "id": "block_1",
          "type": "block",
        },
      ],
      "id": "dynamicSplit_0",
      "type": "dynamicSplit",
    },
    {
      "id": "end_0",
      "type": "end",
    },
  ],
}
`;

exports[`flow-operation-base-service > moveNodes 2`] = `
{
  "nodes": [
    {
      "id": "start_0",
      "type": "start",
    },
    {
      "blocks": [
        {
          "id": "block_0",
          "type": "block",
        },
        {
          "id": "block_1",
          "type": "block",
        },
        {
          "id": "noop_0",
          "type": "noop",
        },
      ],
      "id": "dynamicSplit_0",
      "type": "dynamicSplit",
    },
    {
      "id": "end_0",
      "type": "end",
    },
  ],
}
`;
